--- a/wp-content/themes/theblog-child/sass/home.css.sass
+++ b/wp-content/themes/theblog-child/sass/home.css.sass
@@ -46,7 +46,11 @@ h1, h2, h3, h4, h5, h6
 /* navbar  & homepage - custom color */
 #off-canvas, #header-navigation
 	&.background-color-2
-		background-color: white
+		background-color: #f2f2f2
+
+/* mobile navbar */
+header .nav-default > .navbar-default .navbar-toggle .icon-bar
+	background-color: $OFN-grey
 
 header .nav-default > .navbar-default .navbar-nav > li > a
 	color: rgba($OFN-grey, 0.6)
